--- a/mader/param/mader.yaml
+++ b/mader/param/mader.yaml
@@ -6,12 +6,13 @@ is_delaycheck: true
 use_ff: true # use feedforward
 visual: true #publish visualization stuff
 color_type: "vel" #"vel" or "plain"
-n_agents: 16 #only used for the color in the trajectory
+
+n_agents: 8
 
 dc: 0.01            #(seconds) Duration for the interpolation=Value of the timer pubGoal
 goal_radius: 0.15    #(m) Drone has arrived to the goal when distance_to_goal<GOAL_RADIUS
 drone_radius: 0.25  #(m) Used for collision checking # not used anymore replaced by drone_bbox
-drone_bbox: [1.0, 1.0, 1.5] #(m) Used for collision checking replacing drone_radius. The bounding box dimension [x y z]
+drone_bbox: [0.25, 0.25, 0.25] #(m) Used for collision checking replacing drone_radius. The bounding box dimension [x y z]
 
 #w_max: 0.4           # [rd/s] Maximum angular velocity. 0.4 for Hardware
 w_max: 0.0
