--- a/mader/param/mader.yaml
+++ b/mader/param/mader.yaml
@@ -19,9 +19,9 @@ w_max: 0.0
 
 alpha_filter_dyaw: 0.99 # #[] Filter parameter for dyaw, \in [0,1]. Higher--> More aggressive filtering
 
-Ra: 20.0           # [m] Radius of my planning sphere (planning horizon). Should be < fov_depth
+Ra: 10.0           # [m] Radius of my planning sphere (planning horizon). Should be < fov_depth
 
-expected_comm_delay: 0.25 #seconds
+expected_comm_delay: 0.3 #seconds
 simulated_comm_delay: 0.1 #seconds, should be less than expected_comm_delay
 
 x_min: -1000000000.0  # [m] don't forget the .0
@@ -30,8 +30,8 @@ x_max: 10000000000.0  # [m] don't forget the .0
 y_min: -1000000000.0  # [m] don't forget the .0
 y_max: 1000000000.0   # [m] don't forget the .0
 
-# z_min: -1000000000.0  # [m] points below this are considered ground
-# z_max: 1000000000.0   # [m] JPS is not allowed to give a solution that goes higher than this height
+z_min: -1000000000.0  # [m] points below this are considered ground
+z_max: 1000000000.0   # [m] JPS is not allowed to give a solution that goes higher than this height
 
 # highbay
 # x_min: -4.1  # [m] don't forget the .0
@@ -40,8 +40,8 @@ y_max: 1000000000.0   # [m] don't forget the .0
 # y_min: -4.1  # [m] don't forget the .0
 # y_max: 4.1   # [m] don't forget the .0
 
-z_min: 0.0  # [m] don't forget the .0
-z_max: 2.0  # [m] don't forget the .0
+# z_min: 0.0  # [m] don't forget the .0
+# z_max: 2.0  # [m] don't forget the .0
 
 #For single-agent simulations
 v_max: [2.0, 2.0, 2.0]   #[m/s]  7.0
