--- a/mader/param/mader.yaml
+++ b/mader/param/mader.yaml
@@ -1,6 +1,6 @@
 # if simulatin or hex?
 sim: true
-# use delay_check or not?
+# use delay check or not?
 is_delaycheck: false
 
 use_ff: true # use feedforward
@@ -22,7 +22,7 @@ alpha_filter_dyaw: 0.99 # #[] Filter parameter for dyaw, \in [0,1]. Higher--> Mo
 Ra: 10.0           # [m] Radius of my planning sphere (planning horizon). Should be < fov_depth
 
 delay_check: 0.0 #seconds
-simulated_comm_delay: 0.05 #seconds, should be less than delay_check
+simulated_comm_delay: 0.05 #seconds
 
 x_min: -1000000000.0  # [m] don't forget the .0
 x_max: 10000000000.0  # [m] don't forget the .0
