--- a/mader/param/mader.yaml
+++ b/mader/param/mader.yaml
@@ -1,7 +1,7 @@
 # if simulatin or hex?
 sim: true
 # use delay check or not?
-####is_delaycheck: false
+#######is_delaycheck: false
 
 use_ff: true # use feedforward
 visual: true #publish visualization stuff
@@ -21,7 +21,7 @@ alpha_filter_dyaw: 0.99 # #[] Filter parameter for dyaw, \in [0,1]. Higher--> Mo
 
 Ra: 15.0           # [m] Radius of my planning sphere (planning horizon). Should be < fov_depth
 
-####delay_check: 0.0 #seconds
+#######delay_check: 0.0 #seconds
 simulated_comm_delay: 0.05 #seconds
 comm_delay_param: 3.0
 
