--- a/mader/param/mader.yaml
+++ b/mader/param/mader.yaml
@@ -1,7 +1,7 @@
 # if simulatin or hex?
 sim: true
 # use delay check or not?
-#######################is_delaycheck: false
+is_delaycheck: false
 
 use_ff: true # use feedforward
 visual: true #publish visualization stuff
@@ -19,11 +19,11 @@ w_max: 0.0
 
 alpha_filter_dyaw: 0.99 # #[] Filter parameter for dyaw, \in [0,1]. Higher--> More aggressive filtering
 
-Ra: 8.0           # [m] Radius of my planning sphere (planning horizon). Should be < fov_depth
+Ra: 15.0           # [m] Radius of my planning sphere (planning horizon). Should be < fov_depth
 
-#######################delay_check: 0.0 #seconds
+delay_check: 0.0 # seconds
 simulated_comm_delay: 0.05 #seconds
-comm_delay_param: 3.0
+comm_delay_param: 6.5
 
 x_min: -1000000000.0  # [m] don't forget the .0
 x_max: 10000000000.0  # [m] don't forget the .0
@@ -46,7 +46,7 @@ z_max: 1000000000.0   # [m] JPS is not allowed to give a solution that goes high
 
 #For single-agent simulations
 
-v_max: [3.5, 3.5, 3.5]   #[m/s]  7.0
+v_max: [3.0, 3.0, 3.0]   #[m/s]  7.0
 a_max: [20.0, 20.0, 9.6]   #[m/s2] Note that if a_max.z() > 9.81, the drone may flip
 j_max: [30.0, 30.0, 30.0]   #[m/s3]  #Right now it's only used for Gurobi, not for NLOPT
 
@@ -80,10 +80,10 @@ mu: 0.4    #% of time spent to solve the optimization
 a_star_samp_x: 5 # odd number
 a_star_samp_y: 5 # odd number
 a_star_samp_z: 5 # odd number
-a_star_fraction_voxel_size: 0.5 #\in [0,1] The higher, the bigger the voxel size in A* is(i.e. more prunning)
+a_star_fraction_voxel_size: 0.1 #\in [0,1] The higher, the bigger the voxel size in A* is(i.e. more prunning)
 allow_infeasible_guess: true  #whether allow infeasible guesses to be used for the optimization. If false, straight line guess will be used in the case of an infeasible guess
 
-a_star_bias: 0.01 #Bias (cost=g+bias*h) in the A* search #default is 1.0
+a_star_bias: 0.5 #Bias (cost=g+bias*h) in the A* search #default is 1.0
 
 basis: "MINVO"  #MINVO OR B_SPLINE or BEZIER.  This is the basis used for collision checking
 
