--- a/mader/param/mader.yaml
+++ b/mader/param/mader.yaml
@@ -1,7 +1,7 @@
 # if simulatin or hex?
 sim: true
 # use delay check or not?
-is_delaycheck: false
+#is_delaycheck: false
 
 use_ff: true # use feedforward
 visual: true #publish visualization stuff
@@ -21,9 +21,9 @@ alpha_filter_dyaw: 0.99 # #[] Filter parameter for dyaw, \in [0,1]. Higher--> Mo
 
 Ra: 15.0           # [m] Radius of my planning sphere (planning horizon). Should be < fov_depth
 
-delay_check: 0.0 # seconds
+#delay_check: 0.0 # seconds
 simulated_comm_delay: 0.05 #seconds
-comm_delay_param: 1.5
+comm_delay_param: 2.5
 
 x_min: -1000000000.0  # [m] don't forget the .0
 x_max: 10000000000.0  # [m] don't forget the .0
@@ -54,7 +54,7 @@ j_max: [30.0, 30.0, 30.0]   #[m/s3]  #Right now it's only used for Gurobi, not f
 # a_max: [3.0, 3.0, 3.0]   #[m/s2] Note that if a_max.z() > 9.81, the drone may flip
 # j_max: [4.0, 4.0, 4.0]   #[m/s3]  #Right now it's only used for Gurobi, not for NLOPT
 
-factor_alpha: 2.5 #[-] DeltaT = factor_alpha*States_took_previous_replan
+factor_alpha: 3.5 #[-] DeltaT = factor_alpha*States_took_previous_replan
 
 #Parameters for NLOPT
 num_pol: 4
