--- a/mader/param/mader.yaml
+++ b/mader/param/mader.yaml
@@ -3,7 +3,7 @@ sim: true
 # need take off?
 is_take_off: false
 # use delay check or not?
-is_delaycheck: true
+##is_delaycheck: true
 max_agent_number: 7
 
 use_ff: true # use feedforward
@@ -24,9 +24,9 @@ alpha_filter_dyaw: 0.99 # #[] Filter parameter for dyaw, \in [0,1]. Higher--> Mo
 
 Ra: 8.0           # [m] Radius of my planning sphere (planning horizon). Should be < fov_depth
 
-delay_check: 0.05 # seconds
+##delay_check: 0.05 # seconds
 simulated_comm_delay: 0.05 #seconds
-comm_delay_param: 2.5
+comm_delay_param: 1.0
 
 x_min: -1000000000.0  # [m] don't forget the .0
 x_max: 10000000000.0  # [m] don't forget the .0
@@ -74,7 +74,7 @@ solver: "LD_MMA"
 # LD_TNEWTON_RESTART, LD_TNEWTON_PRECOND, LD_VAR1, LD_LBFGS_NOCEDAL, COBYLA
 
 # kappa + mu <=1 Ideally kappa + mu<1 (so that there is time for other stuff)
-upper_bound_runtime_snlopt: 0.35 #[seconds] snlopt (init guess + solver) will never take longer than this amount of seconds
+upper_bound_runtime_snlopt: 1.5 #[seconds] snlopt (init guess + solver) will never take longer than this amount of seconds
 lower_bound_runtime_snlopt: 0.05 #[seconds] snlopt (init guess + solver) will never take less than this amount of seconds
 kappa: 0.4 #% of time spent to find initial guess
 mu: 0.4    #% of time spent to solve the optimization
