--- a/mader/param/mader.yaml
+++ b/mader/param/mader.yaml
@@ -3,7 +3,7 @@ sim: true
 # need take off?
 is_take_off: false
 # use delay check or not?
-#######is_delaycheck: true
+########is_delaycheck: true
 max_agent_number: 7
 
 use_ff: true # use feedforward
@@ -22,9 +22,9 @@ w_max: 0.0
 
 alpha_filter_dyaw: 0.99 # #[] Filter parameter for dyaw, \in [0,1]. Higher--> More aggressive filtering
 
-Ra: 8.0           # [m] Radius of my planning sphere (planning horizon). Should be < fov_depth
+Ra: 15.0           # [m] Radius of my planning sphere (planning horizon). Should be < fov_depth
 
-#######delay_check: 0.05 # seconds
+########delay_check: 0.05 # seconds
 simulated_comm_delay: 0.05 #seconds
 comm_delay_param: 1.0
 
@@ -49,13 +49,13 @@ z_max: 1000000000.0   # [m] JPS is not allowed to give a solution that goes high
 
 #For single-agent simulations
 
-# v_max: [3.5, 3.5, 3.5]   #[m/s]  7.0
-# a_max: [20.0, 20.0, 9.6]   #[m/s2] Note that if a_max.z() > 9.81, the drone may flip
-# j_max: [30.0, 30.0, 30.0]   #[m/s3]  #Right now it's only used for Gurobi, not for NLOPT
+v_max: [3.5, 3.5, 3.5]   #[m/s]  7.0
+a_max: [20.0, 20.0, 9.6]   #[m/s2] Note that if a_max.z() > 9.81, the drone may flip
+j_max: [30.0, 30.0, 30.0]   #[m/s3]  #Right now it's only used for Gurobi, not for NLOPT
 
-v_max: [2.0, 2.0, 2.0]   #[m/s]  7.0
-a_max: [3.0, 3.0, 3.0]   #[m/s2] Note that if a_max.z() > 9.81, the drone may flip
-j_max: [4.0, 4.0, 4.0]   #[m/s3]  #Right now it's only used for Gurobi, not for NLOPT
+# v_max: [2.0, 2.0, 2.0]   #[m/s]  7.0
+# a_max: [3.0, 3.0, 3.0]   #[m/s2] Note that if a_max.z() > 9.81, the drone may flip
+# j_max: [4.0, 4.0, 4.0]   #[m/s3]  #Right now it's only used for Gurobi, not for NLOPT
 
 factor_alpha: 1.5 #[-] DeltaT = factor_alpha*States_took_previous_replan
 
