--- a/mader/param/mader.yaml
+++ b/mader/param/mader.yaml
@@ -1,9 +1,9 @@
 # if simulatin or hex?
-sim: false
+sim: true
 # need take off?
-is_take_off: false
+is_take_off: true
 # use delay check or not?
-##############is_delaycheck: true
+is_delaycheck: true
 max_agent_number: 10
 
 use_ff: true # use feedforward
@@ -24,7 +24,7 @@ alpha_filter_dyaw: 0.99 # #[] Filter parameter for dyaw, \in [0,1]. Higher--> Mo
 
 Ra: 10.0           # [m] Radius of my planning sphere (planning horizon). Should be < fov_depth
 
-##############delay_check: 0.05 # seconds
+delay_check: 0.05 # seconds
 simulated_comm_delay: 0.05 #seconds
 comm_delay_param: 1.0
 
