--- a/mader/param/mader.yaml
+++ b/mader/param/mader.yaml
@@ -38,14 +38,14 @@ comm_delay_param: 1.0
 # z_max: 1000000000.0   # [m] JPS is not allowed to give a solution that goes higher than this height
 
 # highbay
-# x_min: -4.1  # [m] don't forget the .0
-# x_max: 4.1  # [m] don't forget the .0
+x_min: -4.1  # [m] don't forget the .0
+x_max: 4.1  # [m] don't forget the .0
 
-# y_min: -4.1  # [m] don't forget the .0
-# y_max: 4.1   # [m] don't forget the .0
+y_min: -4.1  # [m] don't forget the .0
+y_max: 4.1   # [m] don't forget the .0
 
-# z_min: 0.0  # [m] don't forget the .0
-# z_max: 2.0  # [m] don't forget the .0
+z_min: 0.0  # [m] don't forget the .0
+z_max: 2.0  # [m] don't forget the .0
 
 #For single-agent simulations
 
