--- a/mader/param/mader.yaml
+++ b/mader/param/mader.yaml
@@ -3,7 +3,7 @@ sim: true
 # need take off?
 is_take_off: false
 # use delay check or not?
-#is_delaycheck: true
+###is_delaycheck: true
 max_agent_number: 10
 
 use_ff: true # use feedforward
@@ -24,8 +24,8 @@ alpha_filter_dyaw: 0.99 # #[] Filter parameter for dyaw, \in [0,1]. Higher--> Mo
 
 Ra: 25.0           # [m] Radius of my planning sphere (planning horizon). Should be < fov_depth
 
-#delay_check: 0.05 # seconds
-###########################################################simulated_comm_delay: 0.0 #seconds
+###delay_check: 0.05 # seconds
+#############################################################simulated_comm_delay: 0.0 #seconds
 comm_delay_param: 1.0
 
 x_min: -1000000000.0  # [m] don't forget the .0
@@ -57,7 +57,7 @@ j_max: [30.0, 30.0, 30.0]   #[m/s3]  #Right now it's only used for Gurobi, not f
 # a_max: [3.0, 3.0, 3.0]   #[m/s2] Note that if a_max.z() > 9.81, the drone may flip
 # j_max: [4.0, 4.0, 4.0]   #[m/s3]  #Right now it's only used for Gurobi, not for NLOPT
 
-factor_alpha: 2.5 #[-] DeltaT = factor_alpha*States_took_previous_replan
+factor_alpha: 3.5 #[-] DeltaT = factor_alpha*States_took_previous_replan
 
 #Parameters for NLOPT
 num_pol: 4
@@ -86,7 +86,7 @@ a_star_samp_z: 5 # odd number
 a_star_fraction_voxel_size: 1.0 #\in [0,1] The higher, the bigger the voxel size in A* is(i.e. more prunning)
 allow_infeasible_guess: true  #whether allow infeasible guesses to be used for the optimization. If false, straight line guess will be used in the case of an infeasible guess
 
-a_star_bias: 5.0 #Bias (cost=g+bias*h) in the A* search #default is 1.0
+a_star_bias: 1.0 #Bias (cost=g+bias*h) in the A* search #default is 1.0
 
 basis: "MINVO"  #MINVO OR B_SPLINE or BEZIER.  This is the basis used for collision checking
 
