--- a/mader/param/mader.yaml
+++ b/mader/param/mader.yaml
@@ -3,7 +3,7 @@ sim: true
 # need take off?
 is_take_off: false
 # use delay check or not?
-###is_delaycheck: true
+is_delaycheck: true
 max_agent_number: 10
 
 use_ff: true # use feedforward
@@ -15,49 +15,49 @@ n_agents: 10
 dc: 0.01            #(seconds) Duration for the interpolation=Value of the timer pubGoal
 goal_radius: 0.15    #(m) Drone has arrived to the goal when distance_to_goal<GOAL_RADIUS
 drone_radius: 0.25  #(m) Used for collision checking # not used anymore replaced by drone_bbox
-drone_bbox: [0.5, 0.5, 0.5] #(m) Used for collision checking replacing drone_radius. The bounding box dimension [x y z]
+drone_bbox: [0.8, 0.8, 0.8] #(m) Used for collision checking replacing drone_radius. The bounding box dimension [x y z]
 
 #w_max: 0.4           # [rd/s] Maximum angular velocity. 0.4 for Hardware
 w_max: 0.0
 
 alpha_filter_dyaw: 0.99 # #[] Filter parameter for dyaw, \in [0,1]. Higher--> More aggressive filtering
 
-Ra: 25.0           # [m] Radius of my planning sphere (planning horizon). Should be < fov_depth
+Ra: 12.0           # [m] Radius of my planning sphere (planning horizon). Should be < fov_depth
 
-#delay_check: 0.15 # seconds
-#simulated_comm_delay: 0.0 #seconds
+delay_check: 0.05 # seconds
+simulated_comm_delay: 0.0 #seconds
 comm_delay_param: 1.0
 
-x_min: -1000000000.0  # [m] don't forget the .0
-x_max: 1000000000.0  # [m] don't forget the .0
+# x_min: -1000000000.0  # [m] don't forget the .0
+# x_max: 1000000000.0  # [m] don't forget the .0
 
-y_min: -1000000000.0  # [m] don't forget the .0
-y_max: 1000000000.0   # [m] don't forget the .0
+# y_min: -1000000000.0  # [m] don't forget the .0
+# y_max: 1000000000.0   # [m] don't forget the .0
 
-z_min: -1000000000.0  # [m] points below this are considered ground
-z_max: 1000000000.0   # [m] JPS is not allowed to give a solution that goes higher than this height
+# z_min: -1000000000.0  # [m] points below this are considered ground
+# z_max: 1000000000.0   # [m] JPS is not allowed to give a solution that goes higher than this height
 
 # highbay
-# x_min: -4.1  # [m] don't forget the .0
-# x_max: 4.1  # [m] don't forget the .0
+x_min: -4.1  # [m] don't forget the .0
+x_max: 4.1  # [m] don't forget the .0
 
-# y_min: -4.1  # [m] don't forget the .0
-# y_max: 4.1   # [m] don't forget the .0
+y_min: -4.1  # [m] don't forget the .0
+y_max: 4.1   # [m] don't forget the .0
 
-# z_min: 0.0  # [m] don't forget the .0
-# z_max: 2.0  # [m] don't forget the .0
+z_min: 0.0  # [m] don't forget the .0
+z_max: 2.0  # [m] don't forget the .0
 
 #For single-agent simulations
 
-v_max: [7.0, 7.0, 7.0]   #[m/s]  7.0
-a_max: [20.0, 20.0, 9.6]   #[m/s2] Note that if a_max.z() > 9.81, the drone may flip
-j_max: [30.0, 30.0, 30.0]   #[m/s3]  #Right now it's only used for Gurobi, not for NLOPT
+v_max: [2.0, 2.0, 2.0]   #[m/s]  7.0
+a_max: [3.0, 3.0, 3.0]   #[m/s2] Note that if a_max.z() > 9.81, the drone may flip
+j_max: [4.0, 4.0, 4.0]   #[m/s3]  #Right now it's only used for Gurobi, not for NLOPT
 
 # v_max: [2.0, 2.0, 2.0]   #[m/s]  7.0
 # a_max: [3.0, 3.0, 3.0]   #[m/s2] Note that if a_max.z() > 9.81, the drone may flip
 # j_max: [4.0, 4.0, 4.0]   #[m/s3]  #Right now it's only used for Gurobi, not for NLOPT
 
-factor_alpha: 3.5 #[-] DeltaT = factor_alpha*States_took_previous_replan
+factor_alpha: 2.5 #[-] DeltaT = factor_alpha*States_took_previous_replan
 
 #Parameters for NLOPT
 num_pol: 4
