--- a/mader/param/mader.yaml
+++ b/mader/param/mader.yaml
@@ -3,7 +3,7 @@ sim: true
 # need take off?
 is_take_off: false
 # use delay check or not?
-###is_delaycheck: true
+#is_delaycheck: true
 max_agent_number: 10
 
 use_ff: true # use feedforward
@@ -15,7 +15,7 @@ n_agents: 10
 dc: 0.01            #(seconds) Duration for the interpolation=Value of the timer pubGoal
 goal_radius: 0.15    #(m) Drone has arrived to the goal when distance_to_goal<GOAL_RADIUS
 drone_radius: 0.25  #(m) Used for collision checking # not used anymore replaced by drone_bbox
-drone_bbox: [0.5, 0.5, 0.5] #(m) Used for collision checking replacing drone_radius. The bounding box dimension [x y z]
+drone_bbox: [0.3, 0.3, 0.3] #(m) Used for collision checking replacing drone_radius. The bounding box dimension [x y z]
 
 #w_max: 0.4           # [rd/s] Maximum angular velocity. 0.4 for Hardware
 w_max: 0.0
@@ -25,7 +25,7 @@ alpha_filter_dyaw: 0.99 # #[] Filter parameter for dyaw, \in [0,1]. Higher--> Mo
 Ra: 25.0           # [m] Radius of my planning sphere (planning horizon). Should be < fov_depth
 
 #delay_check: 0.15 # seconds
-#simulated_comm_delay: 0.0 #seconds
+#################simulated_comm_delay: 0.0 #seconds
 comm_delay_param: 1.0
 
 x_min: -1000000000.0  # [m] don't forget the .0
@@ -49,7 +49,7 @@ z_max: 1000000000.0   # [m] JPS is not allowed to give a solution that goes high
 
 #For single-agent simulations
 
-v_max: [7.0, 7.0, 7.0]   #[m/s]  7.0
+v_max: [10.0, 10.0, 10.0]   #[m/s]  7.0
 a_max: [20.0, 20.0, 9.6]   #[m/s2] Note that if a_max.z() > 9.81, the drone may flip
 j_max: [30.0, 30.0, 30.0]   #[m/s3]  #Right now it's only used for Gurobi, not for NLOPT
 
@@ -86,7 +86,7 @@ a_star_samp_z: 5 # odd number
 a_star_fraction_voxel_size: 1.0 #\in [0,1] The higher, the bigger the voxel size in A* is(i.e. more prunning)
 allow_infeasible_guess: true  #whether allow infeasible guesses to be used for the optimization. If false, straight line guess will be used in the case of an infeasible guess
 
-a_star_bias: 1.0 #Bias (cost=g+bias*h) in the A* search #default is 1.0
+a_star_bias: 0.0 #Bias (cost=g+bias*h) in the A* search #default is 1.0
 
 basis: "MINVO"  #MINVO OR B_SPLINE or BEZIER.  This is the basis used for collision checking
 
@@ -101,7 +101,6 @@ alpha_shrink: 0.95 #\in [0,1] Only used for MINVO/Bezier
 alpha: 0.0 #[m] Error in position
 beta: 0.0 #[m] Deviation between the trajectory and the segment between two discretization points
 gamma: 0.1 #[seconds] >0 Time step between discretization points
-
 
 ##### Not used right now in the MADER algorithm
 fov_horiz_deg: 100 #[deg] \in (0,180] ,  angle between two faces of the tetrahedron 
