--- a/mader/param/mader.yaml
+++ b/mader/param/mader.yaml
@@ -28,29 +28,29 @@ delay_check: 0.05 # seconds
 simulated_comm_delay: 0.0 #seconds
 comm_delay_param: 1.0
 
-# x_min: -1000000000.0  # [m] don't forget the .0
-# x_max: 1000000000.0  # [m] don't forget the .0
+x_min: -1000000000.0  # [m] don't forget the .0
+x_max: 1000000000.0  # [m] don't forget the .0
 
-# y_min: -1000000000.0  # [m] don't forget the .0
-# y_max: 1000000000.0   # [m] don't forget the .0
+y_min: -1000000000.0  # [m] don't forget the .0
+y_max: 1000000000.0   # [m] don't forget the .0
 
-# z_min: -1000000000.0  # [m] points below this are considered ground
-# z_max: 1000000000.0   # [m] JPS is not allowed to give a solution that goes higher than this height
+z_min: -1000000000.0  # [m] points below this are considered ground
+z_max: 1000000000.0   # [m] JPS is not allowed to give a solution that goes higher than this height
 
 # highbay
-x_min: -4.1  # [m] don't forget the .0
-x_max: 4.1  # [m] don't forget the .0
+# x_min: -4.1  # [m] don't forget the .0
+# x_max: 4.1  # [m] don't forget the .0
 
-y_min: -4.1  # [m] don't forget the .0
-y_max: 4.1   # [m] don't forget the .0
+# y_min: -4.1  # [m] don't forget the .0
+# y_max: 4.1   # [m] don't forget the .0
 
-z_min: 0.0  # [m] don't forget the .0
-z_max: 2.0  # [m] don't forget the .0
+# z_min: 0.0  # [m] don't forget the .0
+# z_max: 2.0  # [m] don't forget the .0
 
 #For single-agent simulations
 
 v_max: [10.0, 10.0, 10.0]   #[m/s]  7.0
-a_max: [20.0, 20.0, 9.6]   #[m/s2] Note that if a_max.z() > 9.81, the drone may flip
+a_max: [20.0, 20.0, 20.0]   #[m/s2] Note that if a_max.z() > 9.81, the drone may flip
 j_max: [30.0, 30.0, 30.0]   #[m/s3]  #Right now it's only used for Gurobi, not for NLOPT
 
 # v_max: [2.0, 2.0, 2.0]   #[m/s]  7.0
