--- a/mader/param/mader.yaml
+++ b/mader/param/mader.yaml
@@ -10,6 +10,12 @@ is_centralized: true
 # use decentralized traj_ or not?
 max_agent_number: 7
 
+# camera yawing?
+is_camera_yawing: true
+
+w_max: 1.5           # [rd/s] Maximum angular velocity. 0.4 for Hardware
+alpha_filter_dyaw: 0.99 # #[] Filter parameter for dyaw, \in [0,1]. Higher--> More aggressive filtering
+
 use_ff: true # use feedforward
 visual: true #publish visualization stuff
 color_type: "vel" #"vel" or "plain"
@@ -20,10 +26,6 @@ goal_radius: 0.15    #(m) Drone has arrived to the goal when distance_to_goal<GO
 drone_radius: 0.25  #(m) Used for collision checking # not used anymore replaced by drone_bbox
 drone_bbox: [0.9, 0.9, 1.5] #(m) Used for collision checking replacing drone_radius. The bounding box dimension [x y z]
 
-#w_max: 0.4           # [rd/s] Maximum angular velocity. 0.4 for Hardware
-w_max: 0.0
-
-alpha_filter_dyaw: 0.99 # #[] Filter parameter for dyaw, \in [0,1]. Higher--> More aggressive filtering
 
 Ra: 8.0           # [m] Radius of my planning sphere (planning horizon). Should be < fov_depth
 
